# cookiecutter-pipenv

./: .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Pipfile  README.md  README.rst  cookiecutter.json  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  console_script_setup.rst  index.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .envrc  .travis.yml  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
